[package]
name = "unix-ts"
version = "1.0.0"
edition = "2021"
authors = [
  "Luke Sneeringer <luke@sneeringer.com>"
]
keywords = ["date", "time", "unix-timestamp", "timestamp"]
categories = ["date-and-time"]
description = "Unix timestamp manipulation and conversion."
homepage = "https://github.com/lukesneeringer/unix-ts"
repository = "https://github.com/lukesneeringer/unix-ts"
documentation = "https://docs.rs/unix-ts/"
readme = "README.md"
license = "MIT"
exclude = [
  "/.github/*",
  "/rustfmt.toml",
  "/.prettierrc.yaml",
]

[dependencies]
unix-ts-macros = { path = "macros", version = "1" }

[dev-dependencies]
assert2 = "0.3"

[workspace]
members = [".", "macros"]
