[package]
name = "unix-ts-macros"
version = "0.4.0"
edition = "2021"
keywords = ["date", "time", "unix-timestamp", "timestamp"]
categories = ["date-and-time"]
description = "Macro to quickly create unix-ts timestamps."
homepage = "https://github.com/lukesneeringer/unix-ts"
repository = "https://github.com/lukesneeringer/unix-ts"
documentation = "https://docs.rs/unix-ts-macros/"
readme = "README.md"
license = "MIT"
exclude = [
  "/.github/*",
  "/rustfmt.toml",
  "/.prettierrc.yaml",
]

[lib]
proc-macro = true

[dev-dependencies]
unix-ts = { path = "..", version = "0.4.0" }

[build-dependencies]
readme-rustdocifier = "0.1"
